--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-19}
+\date{2020-07-20}
 
 \begin{document}
 \maketitle
@@ -322,25 +322,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4886,16 +4885,19 @@ Standard deviation is represented by the symbol \(\sigma\) and can be calculated
 
 One reason that people like standard deviation is presents the difference betweeeen the data and the model in the original units (e.g., grams). This is in contrast to variance which presents the difference betweeen the data and the model in squared units (e.g., 2.67 grams\(^2\)).
 
-\textbf{Interpretation}. Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. When this is done standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations, as illustrated below:
+\textbf{Interpretation}. Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Sometimes standard deviation is, incorrectly, described as how much data points differ on average from the mean. A quick calculation of the average difference reveals a number (1.33) that does not correspond to the standard deviation (1.63):
 
 \[
 \begin{aligned} 
-\sigma &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
- &= \frac{\sum{|X - \bar{X}|}}{\sqrt{N}}\\
+\overline{diff} &= \frac{\sum{|X - \mu|}}{N}\\
+&= \frac{|8-10| + |10-10| + |12 - 10|}{3}\\
+&= \frac{2 + 0 + 2}{3}\\
+&= \frac{4}{3}\\
+&= 1.33\\
 \end{aligned} 
 \]
 
-As illustrated above, standard deviation is not an average. It's not an average because you are dividing by the square root of N instead of just N. Because standard deviation is not an average, it's much harder to describe how to interpret it. In our view, the best way to think of standard deviation is simply as the square root of variance; because variance has straight forward interpretation.
+As illustrated above, standard deviation is not equal to the average of the deviations from the mean. Because standard deviation is not an average, it's much harder to describe how to interpret it. In our view, the best way to think of standard deviation is simply as the square root of variance; because variance has a straight forward interpretation.
 
 Therefore, we encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
 
@@ -5104,7 +5106,7 @@ The fact that the sample mean provides an unbiased estimate of the population me
 ## 1    172.5
 \end{verbatim}
 
-We can illustrate how random sampling works, with respect to estimating the population mean, by taking a large number of samples from the population. In the code below, we use the get\_M\_samples() command to obtain 1000 samples, each composed of 10 people. For each of these 1000 samples we calculate a variety of statistics and place themm in the many\_samples data frame.
+We can illustrate how random sampling works, with respect to estimating the population mean, by taking a large number of samples from the population. In the code below, we use the get\_M\_samples() command to obtain 5000 samples, each composed of 10 people. For each of these 5000 samples we calculate a variety of statistics and place themm in the many\_samples data frame.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5118,7 +5120,7 @@ We can illustrate how random sampling works, with respect to estimating the popu
 \end{Highlighting}
 \end{Shaded}
 
-We use the head() command to see the first 10 rows (i.e., 10 samples of 1000 samples):
+We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 samples):
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5165,11 +5167,11 @@ You can see the full extent to which the sample means vary by creating a graph w
 
 \includegraphics{bookdown_files/figure-latex/unnamed-chunk-212-1.pdf}
 
-You can see the 1000 sample means plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantialy from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size.
+You can see the 5000 sample means plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantialy from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size.
 
 Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample deviates from the popualtion mean. That said, statisticians are very concerned whether the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
 
-In the code below we calculate the average of the 1000 sample means to determine if the sample mean is an unbiased estimator.
+In the code below we calculate the average of the 5000 sample means to determine if the sample mean is an unbiased estimator.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5183,7 +5185,7 @@ In the code below we calculate the average of the 1000 sample means to determine
 ## 1            172.5
 \end{verbatim}
 
-We find that the average of the 1000 sample mean is 172.55 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean as we did the population mean. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean.
+We find that the average of the 5000 sample mean is 172.55 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean as we did the population mean. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean.
 
 \hypertarget{estimating-variance}{%
 \section{Estimating variance}\label{estimating-variance}}
@@ -5209,7 +5211,7 @@ A sample mean is calculated using sample data which is a random subset of the po
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{pull}\NormalTok{(sample.var.n_}\DecValTok{1}\NormalTok{) }\OperatorTok{%>%}
+\StringTok{ }\KeywordTok{pull}\NormalTok{(sample.var.n) }\OperatorTok{%>%}
 \StringTok{ }\KeywordTok{hist}\NormalTok{(}\DataTypeTok{main =} \StringTok{"Histogram of Sample Variance using n"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
